🔄 Update project branding from WTF Transcript Converter to vCon WTF
- Changed all references in documentation, CLI, and codebase to reflect the new project name.
- Updated installation commands and usage examples to use `vcon-wtf` instead of `wtf-transcript-converter`.
- Revised changelog and contributing guidelines to align with the new branding.
- Ensured consistency across all documentation and code comments regarding the new project identity.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "pytest>=8.4.2",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
+    "twine>=6.2.0",
 ]
 
 [project.optional-dependencies]
@@ -76,7 +77,7 @@ vcon-wtf = "wtf_transcript_converter.cli.main:main"
 [project.urls]
 Homepage = "https://github.com/vcon-dev/wtf-transcript-converter"
 Repository = "https://github.com/vcon-dev/wtf-transcript-converter"
-Documentation = "https://wtf-transcript-converter.readthedocs.io"
+Documentation = "https://vcon-wtf.readthedocs.io"
 "Bug Tracker" = "https://github.com/vcon-dev/wtf-transcript-converter/issues"
 
 [tool.hatch.build.targets.wheel]
