🔧 Enhance CI workflow with additional linting tools
- Added installation of black, isort, flake8, and mypy to the CI pipeline for improved code quality checks.
- Updated linting commands to include checks for formatting and type checking across the src and tests directories.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,10 @@ jobs:
         
     - name: Run linting
       run: |
+        pip install black
+        pip install isort
+        pip install flake8
+        pip install mypy
         uv run black --check src tests
         uv run isort --check-only src tests
         uv run flake8 src tests
