--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,53 +8,30 @@ repos:
       - id: check-added-large-files
       - id: check-merge-conflict
       - id: check-json
+        exclude: tests/fixtures/invalid\.json
       - id: check-toml
       - id: check-ast
       - id: debug-statements
-      - id: check-docstring-first
 
   - repo: https://github.com/psf/black
-    rev: 24.1.1
+    rev: 25.9.0
     hooks:
       - id: black
         language_version: python3.12
         args: [--line-length=99]
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.13.2
+    rev: 6.0.1
     hooks:
       - id: isort
         args: ["--profile", "black", "--line-length=99"]
 
   - repo: https://github.com/pycqa/flake8
-    rev: 7.0.0
+    rev: 7.3.0
     hooks:
       - id: flake8
-        args: [--max-line-length=99, --extend-ignore=E203,W503]
-        additional_dependencies: [flake8-docstrings, flake8-bugbear]
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
-    hooks:
-      - id: mypy
-        additional_dependencies: [types-all]
-        args: [--strict, --ignore-missing-imports]
-
-  - repo: https://github.com/pycqa/bandit
-    rev: 1.7.5
-    hooks:
-      - id: bandit
-        args: [-r, src/, -f, json, -o, bandit-report.json]
-        exclude: tests/
-
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
-    hooks:
-      - id: prettier
-        types_or: [yaml, json, markdown]
-
-  - repo: https://github.com/adamchainz/blacken-docs
-    rev: 1.16.0
-    hooks:
-      - id: blacken-docs
-        additional_dependencies: [black==24.1.1]
+        additional_dependencies:
+          - flake8-docstrings>=1.7.0
+          - flake8-bugbear>=24.12.12
+        args: [--config=setup.cfg]
+        exclude: ^(docs/|main\.py)
