--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ dev = [
     "isort>=6.0.1",
     "mypy>=1.18.2",
     "myst-parser>=4.0.1",
+    "pre-commit>=4.3.0",
     "safety>=3.6.2",
     "sphinx>=8.2.3",
     "sphinx-autodoc-typehints>=3.2.0",
